--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "Heynote",
   "version": "1.6.0",
-  "main": "dist-electron/main/index.js",
   "description": "A dedicated scratch pad",
   "author": "Jonatan Heyman (https://heyman.info)",
   "license": "Commons Clause MIT",
@@ -21,7 +20,7 @@
   },
   "scripts": {
     "dev": "vite",
-    "build": "vue-tsc --noEmit && vite build && electron-builder -c electron-builder.json5",
+    "build": "vue-tsc --noEmit && vite build",
     "prebuild": "vue-tsc --noEmit && vite build",
     "preview": "vite preview",
     "build_grammar": "lezer-generator src/editor/lang-heynote/heynote.grammar -o src/editor/lang-heynote/parser.js",
@@ -51,7 +50,6 @@
     "@codemirror/search": "^6.5.5",
     "@codemirror/state": "^6.3.3",
     "@codemirror/view": "^6.22.2",
-    "@electron/asar": "^3.2.2",
     "@lezer/generator": "^1.5.1",
     "@lezer/markdown": "^1.1.2",
     "@playwright/test": "^1.40.1",
@@ -60,23 +58,13 @@
     "@types/node": "^20.10.5",
     "@vitejs/plugin-vue": "^4.0.0",
     "debounce": "^1.2.1",
-    "electron": "^28.0.0",
-    "electron-builder": "^23.6.0",
-    "electron-builder-notarize": "^1.5.1",
-    "electron-store": "^8.1.0",
-    "electron-updater": "^6.1.7",
     "fs-jetpack": "^5.1.0",
     "prettier": "^3.1.1",
     "rollup-plugin-license": "^3.0.1",
     "sass": "^1.57.1",
     "typescript": "^4.9.4",
     "vite": "^4.5.1",
-    "vite-plugin-electron": "^0.11.1",
-    "vite-plugin-electron-renderer": "^0.11.4",
     "vue": "^3.2.45",
     "vue-tsc": "^1.0.16"
-  },
-  "dependencies": {
-    "electron-log": "^5.0.1"
   }
 }
