--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -6,5 +6,9 @@
     "resolveJsonModule": true,
     "allowSyntheticDefaultImports": true
   },
-  "include": ["vite.config.ts", "package.json", "electron", "shared-utils"]
+  "include": [
+    "vite.config.ts",
+    "package.json",
+    "shared-utils"
+  ]
 }
