--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "webapp:dev": "vite webapp",
     "webapp:build": "vite build webapp",
     "test": "playwright test",
-    "test:ui": "playwright test --ui"
+    "test:ui": "playwright test --ui",
+    "postinstall": "./patch-sass-linker.sh"
   },
   "devDependencies": {
     "@codemirror/autocomplete": "^6.18.6",
